--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "su1im51n/laravel-teams",
+    "name": "ialeroy/laravel-teams",
     "type": "library",
     "license": "MIT",
     "require": {
